--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -5,5 +5,5 @@
     android:choiceMode="singleChoice"
     android:divider="@android:color/transparent"
     android:dividerHeight="0dp"
-    android:background="#AAFF44"
-    tools:context=".Fragment_Menu" />
+    tools:context=".Fragment_Menu"
+    android:background="#00C37B" />
